turtleart.square.Square.scala.error
Erreur de compilation :
Square:2: error: not found: type int
  var i: int = 0;
         ^