turtleart.square.Square.scala.code
override def run() {
  var i: int = 0;
  for(i<-1 to 3){
    avance(200);
 	 droite(90);
  } 
      
  
}